--- a/src/components/Profile/Profile.scss
+++ b/src/components/Profile/Profile.scss
@@ -2,19 +2,107 @@
   width: auto;
   margin-left: auto;
   margin-right: auto;
-  @media only screen and (min-width: 600px){
+  @media only screen and (min-width: 600px) {
     width: 600px;
   }
-  span{
+  span {
     color: #58a0ef;
   }
-  .profile--wrapper{
+  .profile--wrapper {
     padding: 24px;
     margin-top: 48px;
     margin-bottom: 48px;
     min-height: 400px;
   }
-  .profile--content{
+  .profile--content {
     box-shadow: none;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+  }
+  .MuiCardContent-root {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    p {
+      margin-top: 8px;
+      margin-bottom: 0;
+    }
+    p:last-child {
+      margin-bottom: 0;
+    }
+  }
+}
+
+.image-spinner {
+  position: absolute !important;
+  z-index: 998;
+  margin: 0;
+  top: 42%;
+}
+.opacity-spinner {
+  opacity: 0.3;
+  filter: blur(3px);
+}
+.image-wrapper {
+  box-sizing: border-box;
+  width: 100%;
+  height: 0;
+  padding-bottom: 180px;
+  position: relative;
+  overflow: hidden;
+  max-width: 180px;
+  max-height: 180px;
+  display: flex;
+  justify-content: center;
+  &:hover {
+    .uploadOverlay {
+      transition: all 150ms ease;
+      opacity: 1;
+      z-index: 101;
+      cursor: pointer;
+      .uploadImage {
+        position: absolute;
+        top: 0;
+        height: 100%;
+        width: 100%;
+        opacity: 0;
+      }
+    }
+  }
+  .uploadOverlay {
+    box-sizing: border-box;
+    width: 100%;
+    height: 0;
+    padding-bottom: 100%;
+    position: relative;
+    border-radius: 100%;
+    background-color: rgba(88, 160, 240, 0.58);
+    opacity: 0;
+    i {
+      font-size: 40px;
+      color: white;
+      padding: 50%;
+      height: 0;
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      > * {
+        align-self: center;
+      }
+    }
+  }
+  img {
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    top: 0;
+    left: 0;
+    -o-object-fit: cover;
+    object-fit: cover;
+    border-radius: 50%;
+    z-index: 100;
+    max-width: 180px;
+    max-height: 180px;
   }
 }
