finished one player, two player

--- a/src/components/CaroOption/CaroOption.scss
+++ b/src/components/CaroOption/CaroOption.scss
@@ -32,4 +32,19 @@
       margin-bottom: 0;
     }
   }
+  .btn__nav {
+    width: 400px;
+    margin-top: 18px;
+    height: 90px;
+    border-radius: 12px;
+    background: #22d8b4;
+    color: white;
+    font-weight: bold;
+    font-size: 24px;
+  }
+  .caro-option__title {
+    font-size: 30px;
+    margin-top: 20px;
+    margin-bottom: 12px;
+  }
 }
