--- a/src/components/Caro/Caro.scss
+++ b/src/components/Caro/Caro.scss
@@ -1,21 +1,28 @@
+.container.caro-container {
+  display: flex;
+  justify-content: center;
+  margin-top: 20px;
+}
 .caro-container {
-  .container {
-    height: 100vh;
+  .flex-space {
     display: flex;
-    align-items: center;
-    justify-content: center;
-    background: whitesmoke;
+    justify-content: space-between;
+    font-size: 16px;
+  }
+  .flex-end {
+    display: flex;
+    justify-content: flex-end;
   }
   .board {
     background: white;
-    border-top: 1px solid grey;
-    border-left: 1px solid grey;
+    border-top: 1px solid #bfbfbf;
+    border-left: 1px solid #bfbfbf;
   }
   button.square {
     width: 28px;
     height: 100%;
     background: none;
-    border: 1px solid grey;
+    border: 1px solid #bfbfbf;
     border-left: none;
     border-top: none;
     cursor: pointer;
@@ -32,27 +39,38 @@
 
   .turn {
     width: 200px;
+    height: 300px;
     text-align: center;
-    margin-bottom: 110px;
+    margin-top: 24px;
     position: relative;
   }
-  .turn .left {
+  .turn-left {
     margin-right: 40px;
+    &.active {
+      box-shadow: -4px 2px 10px #80808045;
+    }
   }
-  .turn .right {
+  .turn-right {
     margin-left: 40px;
+    &.active {
+      box-shadow: 4px 2px 10px #80808045;
+    }
   }
 
   .symbol {
-    margin-top: 40px;
+    margin-top: 100px;
     font-size: 60px;
     font-weight: bold;
   }
   .turn-animation {
-    left: 50%;
-    margin-left: -50px;
-    top: -10px;
+    text-align: center;
+    width: 200px;
+    top: 40px;
     position: absolute;
+    animation: jump-up 1s;
+    animation-iteration-count: infinite;
+  }
+  .jump-animation {
     animation: jump-up 1s;
     animation-iteration-count: infinite;
   }
@@ -68,48 +86,6 @@
     }
   }
 
-  /* Modal */
-  .custom-card {
-    margin-top: -12px !important;
-    padding-bottom: 20px !important;
-    font-size: 18px;
-  }
-
-  .card-custom {
-    display: flex;
-    align-items: center;
-    flex-direction: column;
-    margin-top: 100px;
-  }
-
-  .btn-restart {
-    color: white;
-    background: rgb(0, 162, 255);
-    margin-top: 36px;
-  }
-  .btn-close {
-    position: absolute;
-    right: 8px;
-    top: 8px;
-    background: white;
-    color: #797979;
-    border-radius: 50%;
-    border: 1px solid #e4e4e4;
-    padding: 4px 10px;
-    font-size: 20px;
-    font-weight: 400;
-    box-shadow: 1px 1px 2px #808080;
-  }
-  .btn-close:hover {
-    background: whitesmoke;
-  }
-  .btn-close div {
-    margin-top: -2px;
-  }
-  .card .symbol {
-    font-size: 90px;
-  }
-
   .image-container img {
     width: 28px;
     height: 28px;
@@ -122,18 +98,18 @@
   }
 
   .step-move-container {
-    position: absolute;
-    right: 40px;
-    top: 100px;
+    padding-bottom: 12px;
+    border-bottom: 1px solid grey;
   }
   .step-move {
     list-style: none;
-    height: 400px;
+    height: 250px;
     overflow-y: scroll;
   }
 
   .btn-step {
     width: 140px;
+    white-space: pre-line;
   }
   .btn-step:hover,
   .current {
@@ -177,4 +153,17 @@
     background: #a9a9a9 !important;
     color: white;
   }
+
+  .btn-restart {
+    color: white;
+    background: rgb(0, 162, 255);
+    margin-top: 36px;
+  }
+}
+
+.text--success {
+  color: rgb(38, 236, 38);
+}
+.text--error {
+  color: tomato;
 }
